--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -211,7 +211,7 @@
 						
 					</div>
 					
-					<div id="age-display" style="margin-bottom: 10px; font-weight: bold; color: red"></div>
+					<div id="age-display" style="margin-bottom: 10px; /*font-weight: bold;*/ color: red"></div>
 					<span id="dob-error" style="margin-bottom: 5px; margin-top: -15px; font-size: 12px; color: red; display: none">Please enter Date of Birth.</span>
 					<span id="age-days-error" style="margin-bottom: 5px; margin-top: -15px; font-size: 12px; color: red; display: none">Please enter the number of days old.</span>
 					<span id="age-months-error" style="margin-bottom: 5px; margin-top: -15px; font-size: 12px; color: red; display: none">Please enter the age (in months).</span>
@@ -282,102 +282,6 @@
 			});
 		});
 
-		function calculateAgeInDays(dob, currentDay) {
-			const [dobDay, dobMonth, dobYear] = dob.split("/").map(Number);
-			const [currentDayDay, currentDayMonth, currentDayYear] = currentDay
-				.split("/")
-				.map(Number);
-
-			// Tạo đối tượng Date từ các giá trị đã phân tích
-			const birthDate = new Date(dobYear, dobMonth - 1, dobDay);
-			const currentDate = new Date(
-				currentDayYear,
-				currentDayMonth - 1,
-				currentDayDay,
-			);
-
-			// Tính tuổi bằng ngày
-			const timeDifference = currentDate - birthDate;
-			const ageInDays = Math.floor(timeDifference / (1000 * 60 * 60 * 24));
-
-			return ageInDays;
-		}
-		
-		// Hàm kiểm tra và cập nhật trạng thái nút đo
-		function updateMeasuredButtons(totalMonths) {
-				const isAbove5Years = totalMonths > 60; 
-				const recumbentBtn = document.getElementById("recumbent-btn");
-				const standingBtn = document.getElementById("standing-btn");
-				const measuredInput = document.getElementById("measured");
-
-				if (isAbove5Years) {
-						// Vô hiệu hóa Recumbent và mặc định chọn Standing
-						recumbentBtn.disabled = true;
-						standingBtn.disabled = true;
-						measuredInput.value = "h";
-						standingBtn.classList.add("active");
-						recumbentBtn.classList.remove("active");
-				} else {
-						// Kích hoạt lại các nút nếu trẻ dưới 5 tuổi
-						recumbentBtn.disabled = false;
-						standingBtn.disabled = false;
-
-						// Tự động chọn đo Standing nếu tháng >= 24, ngược lại chọn Recumbent
-						if (totalMonths >= 24) {
-								selectMeasured("h");
-						} else {
-								selectMeasured("l");
-						}
-				}
-		}
-
-
-		// Hàm tính tổng tháng từ tuổi nhập vào
-		function calculateTotalMonths(ageYears, ageMonths) {
-			return ageYears * 12 + ageMonths;
-		}
-		function updateAgeDisplay() {
-				const dob = document.getElementById("dob").value;
-				const currentDay = document.getElementById("current-day").value;
-
-				if (dob && currentDay) {
-						const [dobDay, dobMonth, dobYear] = dob.split("/").map(Number);
-						const birthDate = new Date(dobYear, dobMonth - 1, dobDay);
-
-						const [currentDayDay, currentDayMonth, currentDayYear] = currentDay.split("/").map(Number);
-						const currentDate = new Date(currentDayYear, currentDayMonth - 1, currentDayDay);
-
-						let ageYears = currentDate.getFullYear() - birthDate.getFullYear();
-						let ageMonths = currentDate.getMonth() - birthDate.getMonth();
-						let ageDays = currentDate.getDate() - birthDate.getDate();
-
-						if (ageMonths < 0 || (ageMonths === 0 && ageDays < 0)) {
-								ageYears--;
-								ageMonths += 12;
-						}
-						if (ageDays < 0) {
-								const prevMonth = new Date(currentDate.getFullYear(), currentDate.getMonth(), 0);
-								ageDays += prevMonth.getDate();
-								ageMonths--;
-						}
-
-						const totalMonths = calculateTotalMonths(ageYears, ageMonths);
-
-						// Gọi hàm kiểm tra trạng thái nút đo
-						updateMeasuredButtons(totalMonths);
-
-						let ageDisplayText = "";
-						if (ageYears === 0 && ageMonths === 0 && ageDays <= 30) {
-								ageDisplayText = `Age: <b>${ageDays}</b> day(s)`;
-						} else if (ageYears === 0 && ageMonths <= 12) {
-								ageDisplayText = `Age: <b>${ageMonths}</b> month(s), ${ageDays} day(s)`;
-						} else {
-								ageDisplayText = `Age: <b>${ageYears}</b> year(s), ${ageMonths} month(s), ${ageDays} day(s)`;
-						}
-
-						document.getElementById("age-display").innerHTML = ageDisplayText;
-				}
-		}
 		// Thêm sự kiện để cập nhật tuổi khi giá trị dob hoặc current-day thay đổi
 		document.getElementById("dob").addEventListener("change", updateAgeDisplay);
 		document.getElementById("current-day").addEventListener("change", updateAgeDisplay);
@@ -398,31 +302,6 @@
 						updateMeasuredButtons(ageMonths);
 				}
 		});
-
-		function updateChartsBasedOnSelection() {
-			const selectedType = document.getElementById("chart-type-selector").value;
-
-			// Hiển thị các biểu đồ tương ứng với lựa chọn
-			if (data.charts.bmi) {
-				const bmiChart = data.charts.bmi[selectedType];  // Lấy dữ liệu tương ứng Z-Score hoặc Percentile
-				Plotly.react("bmi-chart", JSON.parse(bmiChart.data).data, JSON.parse(bmiChart.data).layout, bmiChart.config);
-			}
-
-			if (data.charts.wfa) {
-				const wfaChart = data.charts.wfa[selectedType];  // Lấy dữ liệu tương ứng Z-Score hoặc Percentile
-				Plotly.react("wfa-chart", JSON.parse(wfaChart.data).data, JSON.parse(wfaChart.data).layout, wfaChart.config);
-			}
-
-			if (data.charts.lhfa) {
-				const lhfaChart = data.charts.lhfa[selectedType];  // Lấy dữ liệu tương ứng Z-Score hoặc Percentile
-				Plotly.react("lhfa-chart", JSON.parse(lhfaChart.data).data, JSON.parse(lhfaChart.data).layout, lhfaChart.config);
-			}
-
-			if (data.charts.wflh) {
-				const wflhChart = data.charts.wflh[selectedType];  // Lấy dữ liệu tương ứng Z-Score hoặc Percentile
-				Plotly.react("wflh-chart", JSON.parse(wflhChart.data).data, JSON.parse(wflhChart.data).layout, wflhChart.config);
-			}
-		}
 
 	// Gọi hàm updateChartsBasedOnSelection() khi có sự thay đổi dropdown
 	document.getElementById("chart-type-selector").addEventListener("change", updateChartsBasedOnSelection);
