--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -136,7 +136,7 @@
 						No data available
 				</div>
 
-				<div class="collapsible-content" id="collapsible-content" style="display: none">
+				<div class="collapsible-content" id="collapsible-content" style="visibility: hidden;">
 						<h3 style="display: inline-block; margin-top: -10px; margin-right: 10px;">Show Chart Type:</h3>
 						<select class="dropbtn" id="chart-type-selector" onchange="updateAllCharts()">
 								<option value="zscore">Z-Scores</option>
@@ -230,7 +230,7 @@
 						
 					</div>
 					
-					<div id="age-display" style="margin-bottom: 10px; /*font-weight: bold;*/ color: red"></div>
+					<div id="age-display" style="margin-bottom: 10px; color: red"></div>
 					<span id="dob-error" style="margin-bottom: 5px; margin-top: -15px; font-size: 12px; color: red; display: none">Please enter Date of Birth.</span>
 					<span id="age-days-error" style="margin-bottom: 5px; margin-top: -15px; font-size: 12px; color: red; display: none">Please enter the number of days old.</span>
 					<span id="age-months-error" style="margin-bottom: 5px; margin-top: -15px; font-size: 12px; color: red; display: none">Please enter the age (in months).</span>
@@ -277,24 +277,24 @@
 	</div>
 	<script>
 		let data;
-
+		window.addEventListener("resize", resizeCharts);  // Gắn sự kiện resize để biểu đồ co dãn
+		
 		document.addEventListener("DOMContentLoaded", function () {
-			// Initialize Flatpickr for Date of Birth and Current Day inputs
 			flatpickr("#dob", {
 				dateFormat: "d/m/Y",
 				onChange: updateAgeDisplay, // Cập nhật tuổi khi thay đổi ngày sinh
 				maxDate: "today",
 				locale: {
-					firstDayOfWeek: 1, // Đặt thứ hai là ngày đầu tuần
+					firstDayOfWeek: 1,
 				},
 			});
 
 			flatpickr("#current-day", {
 				dateFormat: "d/m/Y",
-				defaultDate: new Date(), // Set current day as default
-				onChange: updateAgeDisplay, // Cập nhật tuổi khi thay đổi ngày sinh
+				defaultDate: new Date(), 
+				onChange: updateAgeDisplay,
 				locale: {
-					firstDayOfWeek: 1, // Đặt thứ hai là ngày đầu tuần
+					firstDayOfWeek: 1,
 				},
 			});
 		});
@@ -308,6 +308,7 @@
 				const ageMonths = parseInt(this.value, 10);
 				if (!isNaN(ageMonths)) {
 						updateMeasuredButtons(ageMonths);
+						updateAgeDisplay();
 				}
 		});
 
@@ -578,10 +579,11 @@
 				// Ẩn placeholder
 				document.getElementById("text1").style.display = "none";
 		});
-		// Gọi observeContentChanges sau khi trang đã tải xong
-		document.addEventListener("DOMContentLoaded", function() {
-				observeContentChanges("collapsible-content");
-		});
+	
+	// Gọi observeContentChanges sau khi trang đã tải xong
+	document.addEventListener("DOMContentLoaded", function() {
+			observeContentChanges("collapsible-content");
+	});
 	</script>
 </body>
 
