--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -94,13 +94,7 @@
 	<body onload="highlightSelected('item6');">
 		<div class="header">
 			<div class="icon-container" onclick="toggleSidebar()">
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					width="30"
-					height="30"
-					viewBox="0 0 24 24"
-					fill="none"
-				>
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none">
 					<path
 						d="M8.85719 3H15.1428C16.2266 2.99999 17.1007 2.99998 17.8086 3.05782C18.5375 3.11737 19.1777 3.24318 19.77 3.54497C20.7108 
 			4.02433 21.4757 4.78924 21.955 5.73005C22.2568 6.32234 22.3826 6.96253 22.4422 7.69138C22.5 8.39925 22.5 9.27339 22.5 10.3572V13.6428C22.5 
@@ -116,8 +110,7 @@
 			20.4488 16.1458C20.4992 15.5289 20.5 14.7366 20.5 13.6V10.4C20.5 9.26339 20.4992 8.47108 20.4488 7.85424C20.3994 7.24907 20.3072 6.90138 20.173 6.63803C19.8854 
 			6.07354 19.4265 5.6146 18.862 5.32698C18.5986 5.19279 18.2509 5.10062 17.6458 5.05118C17.0289 5.00078 16.2366 5 15.1 5H11.5ZM5 8.5C5 7.94772 5.44772 7.5 6 
 			7.5H7C7.55229 7.5 8 7.94772 8 8.5C8 9.05229 7.55229 9.5 7 9.5H6C5.44772 9.5 5 9.05229 5 8.5ZM5 12C5 11.4477 5.44772 11 6 11H7C7.55229 11 8 11.4477 8 12C8 
-			12.5523 7.55229 13 7 13H6C5.44772 13 5 12.5523 5 12Z"
-						fill="#FFFFFF"
+			12.5523 7.55229 13 7 13H6C5.44772 13 5 12.5523 5 12Z" fill="#FFFFFF"
 					/>
 				</svg>
 				<span class="tooltip-text">Mở Sidebar</span>
@@ -128,42 +121,12 @@
 		</div>
 
 		<div id="mySidebar" class="sidebar">
-			<a
-				id="item1"
-				href="/"
-				onclick="loadPage('cpap.html'); highlightSelected('item1');"
-				>CPAP Calculator</a
-			>
-			<a
-				id="item2"
-				href="/"
-				onclick="loadPage('ett.html'); highlightSelected('item2');"
-				>ETT Size</a
-			>
-			<a
-				id="item3"
-				href="/"
-				onclick="loadPage('bmi.html'); highlightSelected('item3');"
-				>BMI & BSA Calculator</a
-			>
-			<a
-				id="item4"
-				href="/"
-				onclick="loadPage('lightCriteria.html'); highlightSelected('item4');"
-				>Light's Criteria</a
-			>
-			<a
-				id="item5"
-				href="/"
-				onclick="loadPage('ibw.html'); highlightSelected('item5');"
-				>Ideal Body Weight</a
-			>
-			<a
-				id="item6"
-				href="javascript:void(0)"
-				onclick="highlightSelected('item6');"
-				>WHO Z-Score</a
-			>
+			<a id="item1" href="/" onclick="loadPage('cpap.html'); highlightSelected('item1');">CPAP Calculator</a>
+			<a id="item2" href="/" onclick="loadPage('ett.html'); highlightSelected('item2');">ETT Size</a>
+			<a id="item3" href="/" onclick="loadPage('bmi.html'); highlightSelected('item3');">BMI & BSA Calculator</a>
+			<a id="item4" href="/" onclick="loadPage('lightCriteria.html'); highlightSelected('item4');">Light's Criteria</a>
+			<a id="item5" href="/" onclick="loadPage('ibw.html'); highlightSelected('item5');">Ideal Body Weight</a>
+			<a id="item6" href="javascript:void(0)" onclick="highlightSelected('item6');">WHO Z-Score</a>
 		</div>
 
 		<div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
@@ -192,27 +155,15 @@
 
 			<div class="container_of_content">
 				<div class="result-box-zscore">
-					<div
-						class="collapsible-header"
-						onclick="toggleCollapse('collapsible-content', 'arrow-icon')"
-					>
-						<img
-							src="/data/down.png"
-							alt="Arrow Icon"
-							class="arrow-icon"
-							id="arrow-icon"
-						/>
+					<div class="collapsible-header" onclick="toggleCollapse('collapsible-content', 'arrow-icon')">
+						<img src="/data/down.png" alt="Arrow Icon" class="arrow-icon" id="arrow-icon"/>
 						<h2 class="compact-title">Growth Chart Results (WHO Standards)</h2>
 					</div>
 					<div id="no-data-message" class="no-data" style="display: block">No data available</div>
 
 					<div class="collapsible-content" id="collapsible-content" style="visibility: hidden">
 						<h3 style=" display: inline-block; margin-top: -10px; margin-right: 10px;">Show Chart Type:</h3>
-						<select
-							class="dropbtn"
-							id="chart-type-selector"
-							onchange="updateAllCharts()"
-						>
+						<select class="dropbtn" id="chart-type-selector" onchange="updateAllCharts()">
 							<option value="zscore">Z-Scores</option>
 							<option value="percentile">Percentile</option>
 						</select>
@@ -245,12 +196,7 @@
 						<fieldset id="lhfaresult">
 							<legend>LHFA Results</legend>
 							<ol>
-								<li class="results">
-									Z-Score:<span
-										class="scores"
-										id="lenhei_age_result_side"
-									></span>
-								</li>
+								<li class="results">Z-Score:<span class="scores" id="lenhei_age_result_side"></span></li>
 							</ol>
 						</fieldset>
 						<div class="plot-container" id="lhfa-chart"></div>
@@ -771,5 +717,15 @@
 			});
 
 		</script>
+
+		<div id="custom-alert" class="modal">
+			<div class="modal-content">
+				<span class="modal-title">MedixTool</span>
+				<p id="alert-message"></p>
+				<button onclick="closeAlert()">OK</button>
+			</div>
+			
+		</div>
+
 	</body>
 </html>
