--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -720,9 +720,9 @@
 
 		<div id="custom-alert" class="modal">
 			<div class="modal-content">
-				<span class="modal-title">MedixTool</span>
+				<a onclick="closeAlert()" class="link-2"></a>
+				<span class="modal-title">MedixTools</span>
 				<p id="alert-message"></p>
-				<button onclick="closeAlert()">OK</button>
 			</div>
 			
 		</div>
